[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/plataforma_inestable.png" type="Texture" id=1]
[ext_resource path="res://plataforma_inestanle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.857619, 0.125832 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.5, 1 )

[node name="plataforma_inestanle" type="Node2D"]
script = ExtResource( 2 )

[node name="plataforma_fragil" type="StaticBody2D" parent="."]
collision_mask = 3

[node name="Sprite" type="Sprite" parent="plataforma_fragil"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma_fragil"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )
one_way_collision = true

[node name="izquierda" type="Area2D" parent="plataforma_fragil"]
scale = Vector2( 0.768908, 59.4968 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma_fragil/izquierda"]
position = Vector2( -16.0529, -0.0497532 )
scale = Vector2( 5.06982, -0.138894 )
shape = SubResource( 3 )

[node name="derecha" type="Area2D" parent="plataforma_fragil"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma_fragil/derecha"]
position = Vector2( 12.5, -3 )
shape = SubResource( 4 )

[node name="TimerI" type="Timer" parent="."]

[node name="TimerD" type="Timer" parent="."]

[node name="TimerI_B" type="Timer" parent="."]

[node name="TimerD_B" type="Timer" parent="."]

[connection signal="body_entered" from="plataforma_fragil/izquierda" to="." method="_on_izquierda_body_entered"]
[connection signal="body_exited" from="plataforma_fragil/izquierda" to="." method="_on_izquierda_body_exited"]
[connection signal="body_entered" from="plataforma_fragil/derecha" to="." method="_on_derecha_body_entered"]
[connection signal="body_exited" from="plataforma_fragil/derecha" to="." method="_on_derecha_body_exited"]
